Dropbox/zeldadb/zeldabot/pdf_docs/artifacts/phase2_run_P2HF_1756555683.log
  File "/tmp/phase2_hf_direct_test.py", line 55
    'Extract chairman name from this Swedish BRF document. Return JSON: {"chairman": "name"}\,
    ^
SyntaxError: unterminated string literal (detected at line 55)
